[package]
name = "nglayoutng"
version = "0.1.0"
authors = ["Emilio Cobos Álvarez <emilio@crisal.io>"]
edition = "2018"

[dependencies]
app_units = "0.7"
euclid = "0.19"
bitflags = "1.0"
smallvec = "0.6"
kuchiki = "0.7"
html5ever = "0.23"
cssparser = "0.25"
log = "0.4.6"
nglayoutng_derive = { path = "../derive" }
matches = "0.1.0"

[dev-dependencies]
diff = "0.1"
