[package]
name = "nglayoutng"
version = "0.1.0"
authors = ["Emilio Cobos Álvarez <emilio@crisal.io>"]
edition = "2018"

[dependencies]
app_units = "0.7"
euclid = "0.20"
bitflags = "1.0"
smallvec = "0.6"
smallbitvec = "2.5"
kuchiki = "0.7"
html5ever = "0.23"
cssparser = "0.25"
font-kit = "0.10"
log = "0.4.6"
nglayoutng_derive = { path = "../derive" }
matches = "0.1.0"
unicode-bidi = "0.3"
xi-unicode = "0.1"
# harfbuzz = "0.3"
unicode-script = "0.5"

[dev-dependencies]
diff = "0.1"
